# resume

./: .gitignore  HANDOFF-ghpages-rebuild.md  LICENSE.txt  Makefile  README.md  README.txt  USAGE.md  Wayne_See.tex  bruno.bronosky.resume.tex  bruno.bronosky.resume.yaml  community.md  cv-commands.tex  index.html  package.json  resume.json  resume.yaml  richard.paul.bronosky.resume.tex  shell.nix  topcapt.sty
.github/workflows/: update-gist.yml
community/: index.html  index.md
html/: bruno.bronosky.resume.html  index.html
latex-compiler/: Dockerfile  Dockerfile.arm32v7  README.md  latexcat
pdf/: index.html
src/: bruno.bronosky.community.md  bruno.bronosky.resume.tex  bruno.bronosky.resume.yaml  table_of_content.md
src/docx-generator/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/docx-generator/src/docx_generator/: __init__.py  bullets.py  cli.py  converter.py  generator.py  unoconv.py  validator.py
src/docx-generator/tests/: conftest.py  test_converter.py  test_generator.py  test_validator.py
themes/: clone.sh
toc/: README.md
tools/: BOILERPLATE.sh  build.sh  docker-build.sh  docker-shell.sh  docx-generator.py  job-application-helper.py  jsonresume-serve.sh  jsonresume.sh  latex-compile.sh  shell.sh  webserver.sh
