[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that require external dependencies (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 